test/missing_close_tag.stderr
error: encountered an opening HTML element "h1" without a corresponding closing tag.
 --> test/missing_close_tag.rs:6:14
  |
6 |             <h1>"High-Five counter: {count}"
  |              ^^
